--- a/css/desk.css
+++ b/css/desk.css
@@ -148,3 +148,8 @@
 .doctor-option span.disabled {
     color: rgb(180, 180, 180);
 }
+
+/* 드롭다운 목록이 열렸을 때 최상위로 표시 */
+.doctor-options {
+    z-index: 1000;  /* 매우 높은 z-index 값 */
+}
