--- a/css/desk.css
+++ b/css/desk.css
@@ -1,5 +1,3 @@
-
-
 #desk-content-right {
     position: absolute;
     width: calc(39%);
@@ -160,4 +158,14 @@
     border-radius: 4px;
     width: 100%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+/* 시간 표시 스타일 */
+.time-span {
+    display: inline-block;
+    min-width: 55px;
+    text-align: right;
+    margin-right: 10px;
+    color: rgb(110, 110, 124);
+    font-size: 13px;
 }
