--- a/css/common.css
+++ b/css/common.css
@@ -154,7 +154,7 @@
             position: absolute;
             display: none;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            width: calc(39% - 10px); /* 좌측 마진 고려 */
+            width: 39%; /* 좌측 마진 고려 */
             right: 0px; /* 우측 마진 */
             top: 0;
         }
