--- a/css/desk.css
+++ b/css/desk.css
@@ -1,9 +1,3 @@
-#desk-content-right {
-    position: absolute;
-    width: calc(39%);
-
-}
-
 .current-date {
     margin-left: 15px;
     font-size: 0.9em;
@@ -43,6 +37,12 @@
     justify-content: space-between;
     align-items: center;
     background-color: white;
+    cursor: pointer;  /* 마우스 오버시 포인터 커서로 변경 */
+    transition: all 0.2s ease;  /* border-color만이 아닌 모든 변화에 transition 적용 */
+}
+
+.patient-info-container:hover {
+    border: 4px solid rgb(0, 102, 255);  /* 테두리 두께를 2px로 증가하고 색상 변경 */
 }
 
 /* 기본 span 스타일 - flex 유지 */
