--- a/css/desk.css
+++ b/css/desk.css
@@ -42,7 +42,12 @@
 }
 
 .patient-info-container:hover {
-    border: 4px solid rgb(0, 102, 255);  /* 테두리 두께를 2px로 증가하고 색상 변경 */
+    border: 2px solid #81d9fc;  /* 테두리 두께를 2px로 증가하고 색상 변경 */
+}
+
+/* active 상태를 selected로 변경 */
+.patient-info-container.selected {
+    border: 2px solid rgb(0, 102, 255);  /* 클릭시 진한 파란색으로 테두리 변경 */
 }
 
 /* 기본 span 스타일 - flex 유지 */
