--- a/css/calendar.css
+++ b/css/calendar.css
@@ -255,7 +255,7 @@
             font-size: 12px;
         }
 
-        .patient-name {
+        .patient-name-calendar {
             font-size: 12px;
             color: #007bff;
             margin-right: 4px;
