--- a/css/sidebar2.css
+++ b/css/sidebar2.css
@@ -112,7 +112,7 @@
         }
 
         .room-patient-item:hover {
-            background-color: #81d9fc;
+            background-color: #dcf3fc;
         }
 
         .room-patient-item.active {
