--- a/css/common.css
+++ b/css/common.css
@@ -197,7 +197,7 @@
             border-radius: 8px 8px 0 0;
         }
 
-        /* --------------하단 메뉴바 스타일------------- */
+        /* --------------푸터 스타일------------- */
         .content-footer {
             height: 50px;
             border-top: 1px solid hsl(0, 0%, 85%);
