prescription 독립 + 시간에 따른 room, patient list 정리
prescription 독립 + 시간에 따른 room, patient list 정리

여기서 시간에 따른 room,patient list 정리는 아직 테스트 되지 않음

--- a/css/common.css
+++ b/css/common.css
@@ -212,3 +212,14 @@
             right: 0;
             background-color: white;
         }
+
+        .content-body {
+            height: calc(100% - 100px);  /* 전체 높이에서 헤더와 푸터 높이를 뺌 */
+            overflow-y: auto;  /* 내용이 많을 경우 스크롤 */
+        }
+
+        .content-title {
+            font-size: 15px;
+            color: #333;
+            font-weight: bold;
+        }
