--- a/css/prescription.css
+++ b/css/prescription.css
@@ -45,7 +45,7 @@
     .content-footer-prescription {
         height: 50px;
         border-top: 1px solid hsl(0, 0%, 85%);
-        border-right : 1px solid hsl(0, 0%, 85%);
+        border-right: 1px solid hsl(0, 0%, 85%);
         display: flex;
         align-items: center;
         position: absolute;
@@ -53,7 +53,7 @@
         left: 0;
         right: 0;
         background-color: white;
-        width: 75%;
+        width: calc(75% - 1px);  /* 75%에서 1px 줄임 */
     }
 
     .content-body-prescription {
@@ -108,7 +108,6 @@
     margin : 5px 5px 0px 5px;
     border-bottom: 1px solid #ccc;
     background-color : white;
-    border-radius: 8px;
 }
 
 .prescription-center-bottom {
@@ -116,7 +115,6 @@
     margin : 5px;
     border : 1px solid #ccc;
     background-color : white;
-    border-radius: 8px;
 }
 .prescription-right-container {
     width: 100%;  /* content-body-prescription2의 전체 너비 사용 */
