--- a/css/topbar.css
+++ b/css/topbar.css
@@ -1,4 +1,3 @@
-
         /*============================================================여기부터 탑바에 속하는 요소들들==========================================================*/
         /* top-bar: 상단 바 컨테이너 */
         .top-bar {
@@ -56,9 +55,20 @@
             color: white;
             border: none;
             border-radius: 6px;
-            font-size: 14px;
+            height: 33px;
+            width: 140px;
+            font-size: 12px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            display: flex;  /* 아이콘과 텍스트를 가로로 배치 */
+            align-items: center;  /* 세로 중앙 정렬 */
+            justify-content: center;  /* 가로 중앙 정렬 */
+            gap: 10px;  /* 아이콘과 텍스트 사이 간격 */
+        }
+
+        .new-patient-btn img {
+            width: 25px;  /* 아이콘 크기 */
+            height: 25px;
         }
 
         /* new-patient-btn: 신규환자 버튼 hover */
