--- a/css/prescription.css
+++ b/css/prescription.css
@@ -165,7 +165,7 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     height: 33px;
-    width: 140px;
+    width: 120px;
     display: flex;  /* 아이콘과 텍스트를 가로로 배치 */
     align-items: center;  /* 세로 중앙 정렬 */
     justify-content: center;  /* 가로 중앙 정렬 */
@@ -179,4 +179,13 @@
 
 .new-chart-btn:hover {
     background-color: rgb(0, 82, 204);
+}
+
+/* 현재 room 이름 스타일 */
+.current-room-name {
+    position: absolute;
+    left: calc(30% + 30px); /* 세로선(30%) 기준으로 30px 떨어짐 */
+    font-size: 14px;
+    color: rgb(110, 110, 124);
+    font-weight: bold;
 }
