--- a/css/prescription.css
+++ b/css/prescription.css
@@ -13,7 +13,7 @@
     left: 450px;       
     right: 0;
     height: calc(100vh - 60px);  /* 전체 높이에서 탑바 높이 뺌 */
-    background-color: rgb(211, 228, 255);  /* 회색 배경 */
+    background-color: rgb(211, 228, 255);  
     display: flex; /**/
     gap: 10px; /**/
     padding : 10px;/**/
@@ -45,7 +45,7 @@
     .content-footer-prescription {
         height: 50px;
         border-top: 1px solid hsl(0, 0%, 85%);
-        border-right: 2px solid #aaaaaa;
+        border-right: 2px solid #ccc;
         display: flex;
         align-items: center;
         position: absolute;
@@ -64,7 +64,7 @@
         left: calc(30% - 1px);  /* Left 컨테이너 너비와 동일 */
         width: 2px;
         height: 100%;
-        background-color: #aaaaaa;
+        background-color: #ccc;
     }
 
     .content-body-prescription {
@@ -101,7 +101,7 @@
 .prescription-left-container {
     width: 30%;
     height: 100%;
-    border-right: 2px solid #aaaaaa;
+    border-right: 2px solid #ccc;
     background-color : white;
 }
 
@@ -110,20 +110,20 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    border-right: 2px solid #aaaaaa;
+    border-right: 2px solid #ccc;
     background-color: rgb(211, 228, 255);
 }
 
 .prescription-center-top {
     height: 40%;
-    margin : 10px 10px 0px 10px;
+    margin : 5px 5px 0px 5px;
     border-bottom: 1px solid #ccc;
     background-color : white;
 }
 
 .prescription-center-bottom {
     height: 60%;
-    margin : 10px;
+    margin : 5px;
     border : 1px solid #ccc;
     background-color : white;
 }
